--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ nav:
 # You can optionally add a 'label' key to set the title attribute on the link. 
 # 'icon' value will be used as title when 'label' is missing.
 social_links:
-  -
-    icon: github
-    link: https://github.com/no2y
+  # -
+  # icon: github
+  # link: https://github.com/no2y
   # -
   #   icon: twitter
   #   link: /
@@ -49,7 +49,7 @@ tags_overview: false
 #   - post_count: whether to show only the x most recent posts.
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
-  show_all_posts: false
+  show_all_posts: true
   post_count: 5
   sort_updated: false
 
@@ -70,7 +70,7 @@ post:
 # Customize the copyright years
 # Note: if start_year/end_year not provided, will use current year.
 copyright:
-  start_year: 1988
+  start_year: 
   end_year:
 
 # Customize the 404 page
@@ -100,7 +100,7 @@ logo:
   height: 50
   url: /images/logo.png
   gravatar: false
-  grayout: true
+  grayout: false
 
 # Customize the favicons.
 # Cactus supports a limited set of the three most important icons:
@@ -129,7 +129,7 @@ favicon:
 # Set the color scheme.
 # Available color schemes are 'dark', 'light', 'classic' and 'white'.
 # Alternatively, add your own custom color scheme to source/css/_colors.
-colorscheme: classic
+colorscheme: dark
 
 # Maximal width of the page in rem units.
 page_width: 48
@@ -165,8 +165,8 @@ disqus:
 
 # Fill in your Utterances data to enable Utterances comments
 utterances:
-  enabled: false
-  repo: owner/githubrepo
+  enabled: true
+  repo: no2y/no2y.github.io
   issue_term: pathname
   label: Comment
   theme: github-dark
@@ -174,22 +174,22 @@ utterances:
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
 google_analytics:
   enabled: false
-  id: UA-86660611-1
+  id: 
 
 # Fill in your Baidu Analytics tracking ID to enable Baidu Analytics.
 baidu_analytics:
   enabled: false
-  id: 2e6da3c375c8a87f5b664cea6d4cb29c
+  id: 
 
 # Fill in your Cloudflare Analytics tracking ID to enable Cloudflare Analytics.
 cloudflare_analytics:
   enabled: false
-  id: 0dabb6e21848405483a237e6a7b6ed04
+  id: 
 
 # Fill in your Umami Analytics tracking ID to enable Umami Analytics.
 umami_analytics:
   enabled: false
-  id: e77e68be-f6e4-4br3-9365-2b76b57cd571
+  id: 
   host: https://analytics.domain.com
   script_name: umami.js
 
@@ -198,7 +198,7 @@ umami_analytics:
 # To generate hash: `$ echo -n "name@email.com" | md5`.
 gravatar:
   email: name@email.com
-  hash: d41d8cd98f00b204e9800998ecf8427e
+  hash: 
 
 # loads libraries and styles from CDN instead or relying on local files
 cdn:
